--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "homepage": "azure-bear-591661.hostingersite.com",
   "private": true,
   "proxy": "http://localhost:5555",
   "dependencies": {
