changed blue text for contact us in services, swapped middle image in about page

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "azure-bear-591661.hostingersite.com",
+  "homepage": "https://azure-bear-591661.hostingersite.com",
   "private": true,
   "proxy": "http://localhost:5555",
   "dependencies": {
